<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Oi!</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Image</string>
    <string name="get_xml">Send</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">Searching for Oi! devices...</string>
    <string name="p2p_off_warning">Wi-Fi is disabled, please enable it!</string>
    <string name="p2p_off_title">Wi-Fi is disabled</string>
    <string name="p2p_off_message">To use this application, Wi-Fi must be enabled. Please turn on Wi-Fi</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="edit_message">Say Oi to a friend! </string>
    <string name="pick_friend_email">Enter e-mail</string>
    <string name="pick_friend">Send To</string>
    <string name="read">Read</string>
    <string name="foreGroundService">ForeGround Service</string>
    
    <!-- Errors -->
    <string name ="nocontactselected">Please select a contact before sending the message.</string>
    <!-- AIDL Connection -->
    <string name="aidlnotfound">Failed to find Oi Framework, please install it!</string>
    
</resources>
